--- a/app/src/main/res/menu/menu_detalle_activity.xml
+++ b/app/src/main/res/menu/menu_detalle_activity.xml
@@ -3,8 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/action_eliminar"
+        android:id="@+id/delete"
         android:title="Eliminar"
         app:showAsAction="always"
         android:icon="@drawable/ic_action_eliminar"/>
+    <item
+        android:id="@+id/edit"
+        android:title="Editar"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_action_actualizar"/>
 </menu>
