--- a/app/src/main/res/layout/contacto_item.xml
+++ b/app/src/main/res/layout/contacto_item.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        tools:context="com.example.sqlitebaseadapter.MainActivity"
+        tools:context="com.example.sqlitebaseadapter.com.example.laboratorio3.MainActivity"
         android:weightSum="5">
 
         <ImageView
