--- a/app/src/main/res/layout/modelo_lista.xml
+++ b/app/src/main/res/layout/modelo_lista.xml
@@ -13,33 +13,33 @@
         android:paddingBottom="10dip"
         android:id="@android:id/icon"
         />
-    
-    <LinearLayout 
+
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="4"
 		android:orientation="vertical">
-        
+
         <TextView
+            android:id="@+id/text1"
             android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
-            android:id="@android:id/text1"
             android:textSize="20sp"
             android:text="Nombre"/>
-        
-        <TextView 
+
+        <TextView
+            android:id="@+id/text2"
             android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
             android:textSize="15sp"
-            android:id="@android:id/text2"
             android:text="Apellidos" />
 
         <TextView
+            android:id="@+id/text3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:id="@android:id/text3"
-            android:text="telefono" />
-        </LinearLayout>
+            android:text="Telefonos"
+            android:textSize="15sp" />
 
+    </LinearLayout>
 </LinearLayout>
