--- a/app/src/main/res/menu/context_menu.xml
+++ b/app/src/main/res/menu/context_menu.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/edit"
-        android:title="Editar"
-        />
+        android:id="@+id/action_editar"
+        android:title="Editar"/>
+
     <item
-        android:id="@+id/delete"
-        android:title="Eliminar"
-        />
+        android:id="@+id/action_eliminar"
+        android:title="Eliminar" />
 </menu>
