--- a/app/src/main/res/menu/context_menu.xml
+++ b/app/src/main/res/menu/context_menu.xml
@@ -3,9 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_editar"
-        android:title="Editar"/>
+        android:title="@string/editar"/>
 
     <item
         android:id="@+id/action_eliminar"
-        android:title="Eliminar" />
+        android:title="@string/eliminar" />
 </menu>
