--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,50 +8,72 @@
     android:gravity="center"
     tools:context=".RegistrarActivity">
 
-    <TextView
-        android:textSize="25sp"
-        android:textColor="#000"
-        android:gravity="center"
-        android:text="Registrar cuenta"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </TextView>
 
     <EditText
-        android:id="@+id/et_mail"
-        android:layout_marginBottom="10dp"
-        android:textColorHint="@color/colorPrimary"
-        android:hint="Coloque mail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </EditText>
+        android:id="@+id/et_recuperacion_email"
+        android:layout_width="267dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="148dp"
+        android:ems="10"
+        android:hint="@string/correo"
+        android:inputType="textEmailAddress"
+        android:minHeight="48dp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="70dp" />
 
     <EditText
         android:id="@+id/et_pass"
-        android:layout_marginBottom="10dp"
-        android:textColorHint="@color/colorPrimary"
-        android:hint="Coloque password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="266dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="24dp"
+        android:ems="10"
+        android:hint="@string/contrase_a"
 
-    </EditText>
+        android:inputType="textPassword"
+        android:minHeight="48dp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/et_recuperacion_email"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="70dp" />
 
+    <EditText
+        android:id="@+id/et_passconfirmation"
+        android:layout_width="269dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:hint="@string/repetir_contrase_a"
+
+        android:inputType="textPassword"
+        android:minHeight="48dp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_pass"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btn_registrar"
-        android:textColor="#fff"
-        android:text="Registrar"
+        android:layout_width="102dp"
+        android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:text="@string/registrar"
+        android:textColor="#fff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_passconfirmation"
+        app:layout_constraintVertical_bias="0.186">
 
 
     </Button>
 
 
-
-
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
