--- a/app/src/main/res/layout/activity_recuperar_pass.xml
+++ b/app/src/main/res/layout/activity_recuperar_pass.xml
@@ -1,54 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".MainActivity">
-
-
-    <EditText
-        android:id="@+id/et_restorecorreo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="280dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/correo"
-        android:inputType="textEmailAddress"
-        android:minHeight="48dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/et_restorebutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/recuperar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_restorecorreo"
-        app:layout_constraintVertical_bias="0.084" />
+    tools:context=".recuperarPassActivity">
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="268dp"
-        android:layout_height="88dp"
-        android:text="@string/recuperar_password"
-        android:textAlignment="center"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/et_restorecorreo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.609" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:textSize="25sp"
+        android:textColor="#000"
+        android:gravity="center"
+        android:text="@string/coloca_tu_mail_a_recuperar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+    </TextView>
+
+    <EditText
+        android:id="@+id/et_email_olvidado"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:hint="@string/coloque_mail"
+        android:inputType="textEmailAddress"
+        android:minHeight="48dp"
+        android:textColorHint="@color/colorPrimary"
+        android:importantForAutofill="no">
+
+    </EditText>
+
+    <Button
+        android:id="@+id/btn_recuperar_email"
+        android:layout_width="197dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@color/colorPrimary"
+        android:padding="5dp"
+        android:text="@string/recuperar_contrase_a"
+        android:textColor="#fff"></Button>
+
+</LinearLayout>
